@@ -1863,7 +1863,8 @@ help_modification_date VARCHAR(20) default '0',
 agent_logout_link ENUM('0','1','2','3','4') default '1',
 manual_dial_validation ENUM('0','1','2','3','4') default '0',
 mute_recordings ENUM('1','0') default '0',
-user_admin_redirect ENUM('1','0') default '0'
+user_admin_redirect ENUM('1','0') default '0',
+list_status_modification_confirmation ENUM('1','0') default '0'
 ) ENGINE=MyISAM;
 
 CREATE TABLE vicidial_campaigns_list_mix (
@@ -4485,4 +4486,4 @@ INSERT INTO vicidial_settings_containers(container_id,container_notes,container_
 
 UPDATE system_settings set vdc_agent_api_active='1';
 
-UPDATE system_settings SET db_schema_version='1569',db_schema_update_date=NOW(),reload_timestamp=NOW();
+UPDATE system_settings SET db_schema_version='1570',db_schema_update_date=NOW(),reload_timestamp=NOW();
