@@ -1,4 +1,4 @@
-# version: 20190503154401
+# version: 20190528114301
 users-user	User ID	<QXZ>This field is where you put the users ID number, can be up to 8 digits in length, Must be at least 2 characters in length.</QXZ>
 users-pass	Password	<QXZ>This field is where you put the users password. Must be at least 2 characters in length. A medium strength user password will be at least 10 characters in length, and a strong user password will be at least 20 characters in length and have letters as well as at least one number. It is recommended that you use a longer password if possible, stringing together several unrelated words with no spaces, and a number somewhere in the string. The maximum size of a password is 100 characters.</QXZ>
 users-force_change_password	Force Change Password	<QXZ>If this option is set to Y then the user will be prompted to change their password the next time they log in to the administration webpage. Default is N.</QXZ>
@@ -1002,6 +1002,7 @@ settings-generate_cross_server_exten	Generate Cross-Server Phone Extensions	<QXZ
 settings-usacan_phone_dialcode_fix	USA-Canada Phone Number Dialcode Fix	<QXZ>This option if set to 1 will trigger a process that will run at the Timeclock End of Day and will check all phone numbers to populate the dial code, or phone code, field with a 1 if it is missing as well as remove a leading 1 from the phone number field if it is present. Default is 0 for inactive.</QXZ>
 settings-default_phone_code	Default Phone Code	<QXZ>This setting will be used to fill in the Phone Code field on manual dial calls from the agent screen, also called Dial Code in some places. Default is 1.</QXZ>
 settings-user_territories_active	User Territories Active	<QXZ>This setting allows you to enable the User Territories settings from the user modification screen. This feature was added to allow for more integration with a customized Vtiger installation but can have applications in system by itself as well. Default is 0 for disabled.</QXZ>
+settings-list_status_modification_confirmation	List Status Modification Confirmation	<QXZ>This setting will cause the admin interface to request a confirmation whenever a user submits a change to the campaign settings or list settings that involves modifying the -Active- status of a list. Default is 0 for disabled.</QXZ>
 settings-enable_second_webform	Enable Second Webform	<QXZ>This setting allows you to have a second web form for campaigns and in-groups in the agent interface. Default is 0 for disabled.</QXZ>
 settings-enable_third_webform	Enable Third Webform	<QXZ>This setting allows you to have a third web form for campaigns and in-groups in the agent interface. Default is 0 for disabled.</QXZ>
 settings-enable_tts_integration	Enable TTS Integration	<QXZ>This setting allows you to enable Text To Speech integration with Cepstral. This is currently only available for outbound Survey type campaigns. Default is 0 for disabled.</QXZ>
